--- a/assets/css/populares.css
+++ b/assets/css/populares.css
@@ -1,5 +1,12 @@
 .populares{
-    padding: 3rem 0;
+    padding: 3rem 2rem;
+}
+
+.populares__header{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 2px solid #808080d2;
+    padding: .5rem 0;
 }
 
 .populares__card{
@@ -24,7 +31,7 @@
     grid-area: card-base;
     display: grid;
     grid-row-gap: .5rem;
-    grid-template-rows: 
+    grid-template-areas: 
     "card-header"
     "card-descripcion";
     grid-template-rows: 50px auto;
@@ -43,4 +50,45 @@
     flex-wrap: wrap;
     grid-area: contenido;
     padding: 1rem 0rem;
+}
+
+.populares__card___titulo{
+    color: #333333;
+    font-size: 1.5rem;
+}
+
+.populares__card___data{
+    color: #808080;
+    font-size: 0.9rem;
+}
+
+.populares__card___descripcion{
+    color: #333333;
+    line-height: 1.5rem;
+    margin: 1rem 0;
+    text-align: justify;
+}
+
+.populares__titulo{
+    font-weight: 500;
+}
+
+.populares__icon{
+    margin-right: .25rem;
+}
+
+.populares__card___header{
+    border-bottom: 1px solid #dcdcdc;
+    display: flex;
+    justify-content: space-between;
+}
+
+.populares__boton{
+    background: transparent;
+    border: none;
+    color: #333333;
+}
+
+.populares__card:last-child{
+    margin-right: 0px;
 }
